# cpu-renderer

./: CMakeLists.txt  README.md
Include/Console/: Progress.h
Include/Core/: Types.h
Include/Material/: Color.h  Lambert.h  Material.h  Materials.h  PerfectReflection.h
Include/Object/: Objects.h  SceneObject.h
Include/Object/Camera/: Camera.h  Cameras.h  OrthographicCamera.h  PerspectiveCamera.h
Include/Object/Light/: DirectionalLight.h  Light.h  Lights.h  PointLight.h
Include/Object/Model/: Models.h  Plane.h  Sphere.h  TraceableModel.h
Include/Painter/: FacingRatioPainter.h  LambertPainter.h  Painter.h  Painters.h  SceneColorPainter.h  WorldNormalPainter.h
Include/Ray/: Ray.h
Include/Sampler/: NSS.h  RGSS.h  Sampler.h  Samplers.h
Include/Scene/: ObjectsScene.h  Scene.h
Include/Shader/: Color.h
Include/Tracer/: RenderRecord.h  Tracer.h
Source/: Main.cpp
Source/Console/: Progress.cpp
Source/Material/: Lambert.cpp  Material.cpp  PerfectReflection.cpp
Source/Object/Camera/: Camera.cpp  OrthographicCamera.cpp  PerspectiveCamera.cpp
Source/Object/Light/: DirectionalLight.cpp  PointLight.cpp
Source/Object/Model/: Plane.cpp  Sphere.cpp  TraceableModel.cpp
Source/Ray/: Ray.cpp
Source/Sampler/: RGSS.cpp
Source/Scene/: ObjectsScene.cpp  Scene.cpp
Source/Tracer/: Tracer.cpp
